[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Guns/Weap-60-Axe.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Guns/Hold/W_60_Axe_Hold.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Guns/Pick/W_60_Axe_Pick.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.78757
height = 13.2813

[node name="W_60_Axe_Hold" type="Node2D"]
script = ExtResource( 2 )
axe_pickup = ExtResource( 3 )

[node name="POS_Gun" type="Node2D" parent="."]

[node name="Axe" type="Sprite" parent="POS_Gun"]
position = Vector2( 2.56311, -7.68937 )
rotation = -1.5708
texture = ExtResource( 1 )
hframes = 3

[node name="POS_Throw" type="Position2D" parent="."]
position = Vector2( 24, 0 )

[node name="Melee_Area" type="Area2D" parent="."]
collision_layer = 396290

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee_Area"]
position = Vector2( 24.0405, 0 )
shape = SubResource( 1 )
disabled = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 30, 0 )
collision_mask = 3850
[connection signal="body_entered" from="Melee_Area" to="." method="_on_Melee_Area_body_entered"]
